domain name changes

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mohit-portfolio",
-  "homepage": "https://mohitshinde.com",
+  "homepage": "https://mohyams.github.io/Portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
