--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "mohit-portfolio",
-  "homepage": "https://mohyams.github.io/Portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -26,7 +25,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "firebase build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
