--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Developer Portfolio",
-  "name": "Developer Portfolio template by hhhrrrttt222111",
+  "short_name": "Mohit Shinde",
+  "name": "Mohit Shinde Portfolio",
   "icons": [
     {
       "src": "favicon.ico",
