--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Mohit Shinde Portfolio",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "favicon.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
@@ -13,7 +13,7 @@
       "sizes": "64x64"
     },
     {
-      "src": "favicon512.png",
+      "src": "favicon.png",
       "type": "image/png",
       "sizes": "512x512"
     }
