--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "firebase": "^10.3.1",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "react-fast-marquee": "^1.2.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
@@ -26,8 +27,8 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "firebase build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
